--- a/src/App.css
+++ b/src/App.css
@@ -20,3 +20,22 @@
   bottom: 0px;
   z-index: 5px;
 } 
+
+.CartItem{
+  display: flex;
+  justify-content: space-between;
+  font-family: Arial, Helvetica, sans-serif;
+  border-bottom: 1px solid lightblue;
+  padding-bottom: 20px;
+}
+.information,
+.buttons {
+  display: flex;
+  justify-content: space-between;
+}
+
+.CartImg {
+  max-width: 200px;
+  object-fit: cover;
+  margin-left: 40px;
+}
